a little styling, scss variables not visible to fix

--- a/src/app/pages/home/shop-item/shop-item.component.scss
+++ b/src/app/pages/home/shop-item/shop-item.component.scss
@@ -1,3 +1,8 @@
 .item {
+	width: 350px;
+	height: 407px;
+	border-radius: 30px;
+	background: $color-white;
 	padding: 15px 18px 26px 22px;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
